# advent2023_rust

./: Cargo.toml  README.md
data/day16/: example02.txt
data/day21/: example01.txt  example02.txt  input.txt
data/day24/: example01.txt  input.txt
src/: macros.rs  main.rs
src/common/: abs.rs  area.rs  block.rs  direction.rs  helper.rs  idx.rs  math.rs  matrix2.rs  matrix3.rs  mod.rs  name.rs  pos2.rs  pos3.rs  turn.rs  unit_vector.rs
src/common/path_finder/: item_skipper.rs  mod.rs  path_queue.rs
src/days/: mod.rs  template.rs
src/days/day01/: mod.rs
src/days/day02/: mod.rs
src/days/day03/: mod.rs
src/days/day04/: mod.rs
src/days/day05/: mod.rs
src/days/day06/: mod.rs
src/days/day07/: mod.rs
src/days/day08/: mod.rs
src/days/day09/: mod.rs
src/days/day10/: mod.rs
src/days/day11/: mod.rs
src/days/day12/: mod.rs
src/days/day13/: mod.rs
src/days/day14/: mod.rs
src/days/day15/: mod.rs
src/days/day16/: mod.rs
src/days/day17/: mod.rs
src/days/day18/: mod.rs
src/days/day19/: mod.rs
src/days/day20/: mod.rs
src/days/day21/: mod.rs
src/days/day22/: mod.rs
src/days/day23/: mod.rs
src/days/day24/: mod.rs
src/days/day__/: mod.rs
